--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -15,7 +15,7 @@
   {% feed_meta %}
 
   <link rel="shortcut icon" type="image/x-icon" href="/{{ site.favicon | relative_url }}" />
-  <link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}" />
+  <link rel="stylesheet" href="{{ "main.css" | relative_url }}" />
   {% if site.theme_config.appearance_toggle %}
     {% include toggle_theme_js.html %}
   {% endif %}
