Added my changes to User Guide page

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -11,6 +11,14 @@
     {% endif %}
   </title>
 
+  <style>
+
+  /*# sourceMappingURL=main.css.map */
+  cssClass > rect{
+    fill: none;
+    stroke:#000000;
+ }
+  </style>
   {% seo title=false %}
   {% feed_meta %}
 
