--- a/docs/main.css
+++ b/docs/main.css
@@ -67,11 +67,11 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 /** Tables */
 table { margin-bottom: 30px; width: 100%; text-align: left; color: #3f3f3f; border-collapse: collapse; border: 1px solid #e8e8e8; }
 
-table tr:nth-child(even) { background-color: #f7f7f7; }
+/**table tr:nth-child(even) { background-color: #f7f7f7; }*/
 
 table th, table td { padding: 10px 15px; }
 
-table th { background-color: #f0f0f0; border: 1px solid #dedede; border-bottom-color: #c9c9c9; }
+/**table th { background-color: #f0f0f0; border: 1px solid #dedede; border-bottom-color: #c9c9c9; }*/
 
 table td { border: 1px solid #e8e8e8; }
 
